--- a/ShipGameC++/ShipGame/ShipGame.vcxproj.filters
+++ b/ShipGameC++/ShipGame/ShipGame.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="GraphFactory.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Title.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Vector2D.h">
