--- a/ShipGameC++/ShipGame/ShipGame.vcxproj
+++ b/ShipGameC++/ShipGame/ShipGame.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="GraphFactory.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="Title.cpp" />
     <ClCompile Include="Vector2D.cpp" />
     <ClCompile Include="WinMain.cpp" />
   </ItemGroup>
