--- a/ShipGameC++/ShipGame/ShipGame.vcxproj
+++ b/ShipGameC++/ShipGame/ShipGame.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="GamePlay.cpp" />
     <ClCompile Include="GraphFactory.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Port.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Title.cpp" />
     <ClCompile Include="Vector2D.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="GamePlay.h" />
     <ClInclude Include="GraphFactory.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Port.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Title.h" />
