--- a/ShipGameC++/ShipGame/ShipGame.vcxproj
+++ b/ShipGameC++/ShipGame/ShipGame.vcxproj
@@ -157,9 +157,15 @@
   <ItemGroup>
     <ClCompile Include="GamePlay.cpp" />
     <ClCompile Include="GraphFactory.cpp" />
+    <ClCompile Include="LargeA.cpp" />
+    <ClCompile Include="LargeB.cpp" />
+    <ClCompile Include="MiddleA.cpp" />
+    <ClCompile Include="MiddleB.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Port.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="SmallA.cpp" />
+    <ClCompile Include="SmallB.cpp" />
     <ClCompile Include="Title.cpp" />
     <ClCompile Include="Vector2D.cpp" />
     <ClCompile Include="WinMain.cpp" />
@@ -168,10 +174,16 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GamePlay.h" />
     <ClInclude Include="GraphFactory.h" />
+    <ClInclude Include="LargeA.h" />
+    <ClInclude Include="LargeB.h" />
+    <ClInclude Include="MiddleA.h" />
+    <ClInclude Include="MiddleB.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Port.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="SmallA.h" />
+    <ClInclude Include="SmallB.h" />
     <ClInclude Include="Title.h" />
     <ClInclude Include="Vector2D.h" />
     <ClInclude Include="Window.h" />
